--- a/eshop/public/main.css
+++ b/eshop/public/main.css
@@ -1,73 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eshop</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    
-</head>
+/* style of the slider carousel */
 
-<body>
-    {{View::make('header')}}
-    @yield('content')
-    {{View::make('footer')}}
-</body>
-    <style>
+img.slider-img {
+    height: 400px !important
+}
 
-        
-        img.slider-img {
-            height: 400px !important
-        }
+.slider-text {
+    background-color: #35443585 !important
+}
 
-        .slider-text {
-            background-color: #35443585 !important        
-        }
+.carousel-control-prev-icon {
+    width: 40px;
+    height: 40px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
 
-         .carousel-control-prev-icon {
-            width: 40px;
-            height: 40px;
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
-        }
- 
-        .carousel-control-next-icon {
-            width: 40px;
-            height: 40px;
-            background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
-        }
+.carousel-control-next-icon {
+    width: 40px;
+    height: 40px;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23c593d8' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
+}
 
-        
 
-        .trend-img{
-            max-height: auto !important;
-            max-width: auto !important;
-            
-        }
+/* style of trending section */
 
-        .trending-item{
-            float:left;
-            width: 20%;
-        }
+.trend-img {
+    max-height: auto !important;
+    max-width: auto !important;
+}
 
-        .trending-wrapper{
-            margin:30px;
-        }
+.trending-item {
+    float: left;
+    width: 20%;
+}
 
-      
+.trending-wrapper {
+    margin: 30px;
+}
 
-        .product-details-sigle{
-            max-height:40% !important;
-            max-width:40% !important;
-        }
 
-        
+/* style of the product detail page */
 
-        .btn-outline-success{
-            margin-left:5px !important;
-        }
+.product-details-sigle {
+    max-height: 40% !important;
+    max-width: 40% !important;
+}
 
-       
+
+/* style button navbar */
+
+.btn-outline-success {
+    margin-left: 5px !important;
+}
+
+
+/* footer */
 
 .footer-bs {
     background-color: #3c3d41;
@@ -188,7 +174,4 @@
     .footer-bs .footer-ns {
         border-left: solid 1px rgba(255, 255, 255, 0.10);
     }
-} 
-
-    </style>
-</html>
+}
